Add GetPoolsInNetwork API
