# pkg/server/api.go
@@ -372,6 +372,32 @@ func (api *APIServer) CreateNetwork(
 	return &serverpb.CreateNetworkResponse{}, nil
 }
 
+// GetPoolsInNetwork returns all pools in a given network.
+func (api *APIServer) GetPoolsInNetwork(
+	ctx context.Context,
+	req *serverpb.GetPoolsInNetworkRequest,
+) (*serverpb.GetPoolsInNetworkResponse, error) {
+	if err := req.Validate(); err != nil {
+		return nil, status.Error(codes.InvalidArgument, err.Error())
+	}
+
+	n, err := api.manager.GetNetworkByIP(ctx, &net.IPNet{
+		IP:   net.ParseIP(req.Ip),
+		Mask: net.CIDRMask(int(req.Mask), 32),
+	})
+	if err != nil {
+		return nil, err
+	}
+	pools, err := api.manager.GetPoolsInNetwork(ctx, n)
+	if err != nil {
+		return nil, err
+	}
+
+	return &serverpb.GetPoolsInNetworkResponse{
+		Pools: pools,
+	}, nil
+}
+
 func (api *APIServer) CreatePool(
 	ctx context.Context,
 	req *serverpb.CreatePoolRequest,
