# pkg/server/apiclient/serverpb_get_pools_in_network_response.go
@@ -1,0 +1,15 @@
+/*
+ * server/serverpb/server.proto
+ *
+ * No description provided (generated by Swagger Codegen https://github.com/swagger-api/swagger-codegen)
+ *
+ * OpenAPI spec version: version not set
+ *
+ * Generated by: https://github.com/swagger-api/swagger-codegen.git
+ */
+
+package apiclient
+
+type ServerpbGetPoolsInNetworkResponse struct {
+	Pools []ModelPool `json:"pools,omitempty"`
+}
