# pkg/server/serverpb/server.swagger.json
@@ -431,6 +431,37 @@
         ]
       }
     },
+    "/api/v0/network/{ip}/{mask}/pools": {
+      "get": {
+        "operationId": "GetPoolsInNetwork",
+        "responses": {
+          "200": {
+            "description": "",
+            "schema": {
+              "$ref": "#/definitions/serverpbGetPoolsInNetworkResponse"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "ip",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "mask",
+            "in": "path",
+            "required": true,
+            "type": "integer",
+            "format": "int32"
+          }
+        ],
+        "tags": [
+          "NetworkServiceV0"
+        ]
+      }
+    },
     "/api/v0/network/{name}": {
       "get": {
         "operationId": "GetNetwork",
@@ -457,7 +488,6 @@
           },
           {
             "name": "mask",
-            "description": "int32 mask = 2 [(validator.field) = {int_gt: -1, int_lt: 33}];.",
             "in": "query",
             "required": false,
             "type": "integer",
@@ -495,7 +525,6 @@
           },
           {
             "name": "mask",
-            "description": "int32 mask = 2 [(validator.field) = {int_gt: -1, int_lt: 33}];.",
             "in": "query",
             "required": false,
             "type": "integer",
@@ -742,8 +771,7 @@
         },
         "mask": {
           "type": "integer",
-          "format": "int32",
-          "title": "int32 mask = 2 [(validator.field) = {int_gt: -1, int_lt: 33}];"
+          "format": "int32"
         },
         "default_gateways": {
           "type": "array",
@@ -773,8 +801,7 @@
         },
         "mask": {
           "type": "integer",
-          "format": "int32",
-          "title": "int32 mask = 2 [(validator.field) = {int_gt: -1, int_lt: 33}];"
+          "format": "int32"
         },
         "pool": {
           "$ref": "#/definitions/modelPool"
@@ -834,6 +861,17 @@
           "type": "array",
           "items": {
             "$ref": "#/definitions/modelTag"
+          }
+        }
+      }
+    },
+    "serverpbGetPoolsInNetworkResponse": {
+      "type": "object",
+      "properties": {
+        "pools": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/modelPool"
           }
         }
       }
