# pkg/server/serverpb/swagger.pb.go
@@ -434,6 +434,37 @@ const (
         ]
       }
     },
+    "/api/v0/network/{ip}/{mask}/pools": {
+      "get": {
+        "operationId": "GetPoolsInNetwork",
+        "responses": {
+          "200": {
+            "description": "",
+            "schema": {
+              "$ref": "#/definitions/serverpbGetPoolsInNetworkResponse"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "ip",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "mask",
+            "in": "path",
+            "required": true,
+            "type": "integer",
+            "format": "int32"
+          }
+        ],
+        "tags": [
+          "NetworkServiceV0"
+        ]
+      }
+    },
     "/api/v0/network/{name}": {
       "get": {
         "operationId": "GetNetwork",
@@ -460,7 +491,6 @@ const (
           },
           {
             "name": "mask",
-            "description": "int32 mask = 2 [(validator.field) = {int_gt: -1, int_lt: 33}];.",
             "in": "query",
             "required": false,
             "type": "integer",
@@ -498,7 +528,6 @@ const (
           },
           {
             "name": "mask",
-            "description": "int32 mask = 2 [(validator.field) = {int_gt: -1, int_lt: 33}];.",
             "in": "query",
             "required": false,
             "type": "integer",
@@ -745,8 +774,7 @@ const (
         },
         "mask": {
           "type": "integer",
-          "format": "int32",
-          "title": "int32 mask = 2 [(validator.field) = {int_gt: -1, int_lt: 33}];"
+          "format": "int32"
         },
         "default_gateways": {
           "type": "array",
@@ -776,8 +804,7 @@ const (
         },
         "mask": {
           "type": "integer",
-          "format": "int32",
-          "title": "int32 mask = 2 [(validator.field) = {int_gt: -1, int_lt: 33}];"
+          "format": "int32"
         },
         "pool": {
           "$ref": "#/definitions/modelPool"
@@ -837,6 +864,17 @@ const (
           "type": "array",
           "items": {
             "$ref": "#/definitions/modelTag"
+          }
+        }
+      }
+    },
+    "serverpbGetPoolsInNetworkResponse": {
+      "type": "object",
+      "properties": {
+        "pools": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/modelPool"
           }
         }
       }
